# libgpiod_event_demo

./: CMakeLists.txt  README.md  gpioevent.cpp  gpioevent.h
example/: CMakeLists.txt  gpio_printer.cpp
